hasqd/tests/coptest/simple/db/negative/001.inp
# test error hash
create my_md5 xd5 MD5 1 [] 1 0
